2001-04-18  Kalle Marjola  <rpr@wapit.com>

	* gw/bb_store.c: updated writing to file a bit. Still problem if
	messages arrive faster than store_cleanup works, needs to modify
	to use hash at some point

	* gw/bb_smscconn.c: changed so that when shutting down, ignores
	messages that cannot be routed. So if you have not enabled
	SMS-store, some messages can be lost.
	
2001-04-18  Kalle Marjola  <rpr@wapit.com>

	* doc/userguide/userguide.xml: fixed some typos 

2001-04-17  Uoti Urpala  <uau@wapit.com>

	* gw/smsc_emi2.c, gw/emimsg.[ch]: Added support for operation type
	01, other changes to work with different SMSC setups.

2001-04-17  Richard Braakman  <dark@wapit.com>

	* gw/urltrans.c: In strip_keyword(), use the right test for
	end of octstr.  This fixes handling of messages that only
	have the keyword.

2001-04-17  Lars Wirzenius  <liw@iki.fi>

	* gwlib/http.c: When the http module is shut down, set run_status
	to limbo so it can be restarted. Paul Keogh wanted this so that
	(parts of) Kannel can run as a COM object.

2001-04-17  Lars Wirzenius  <liw@iki.fi>

	* doc/CodingStyle: Added a paragraph about CVS tags.

2001-04-16  Richard Braakman  <dark@wapit.com>

	* gw/wap_push_ota.c: Removed <arpa/inet.h> and <netinet/in.h>
	includes.  They are not used by anything and cause portability
	problems.

2001-04-13  Uoti Urpala  <uau@wapit.com>

	* gw/smsbox.c: Bugfix, messages sent with sendsms GET requests
	were always marked as binary (this bug was created when sendsms
	POST was added).

2001-04-12  Lars Wirzenius  <liw@iki.fi>

	* gw/smsc_smpp.c: Make it optional to dump or not dump SMPP pdus
	that are received or sent. Not dumping them reduces "make bench"
	log file sizes by about half a gigabyte.

2001-04-12  Kalle Marjola  <rpr@wapit.com>

	* gw/urltrans.c (urltrans_get_pattern): fixed that %s cannot cause
	overflow if there is catch-all argument

2001-04-11  Richard Braakman  <dark@wapit.com>

        * gw/urltrans.c: Slight simplification of strip_keyword().
