@@ -1,3 +1,7 @@
+2001-04-18  Richard Braakman  <dark@wapit.com>
+
+	* gwlib/gwthread-pthread.c: Made gwthread_join safe.
+
 2001-04-18  Kalle Marjola  <rpr@wapit.com>
 
 	* gw/bb_store.c: updated writing to file a bit. Still problem if
